fixed footer on mobile devices

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -77,7 +77,7 @@ body {
 .footer {
   background-color: #f5f5f5;
   bottom: 0;
-  height: 50px;
+  min-height: 50px;
   position: absolute;
   width: 100%;
 }
